Non-functional toggle buttons for settings

--- a/app/shared/modals/settings.modal.html
+++ b/app/shared/modals/settings.modal.html
@@ -19,10 +19,150 @@
                 <option value="ger">German</option>
               </select>
             </div>
-            <hr class="hr--minor">
+            <hr class="hr--faded">
             <p class="faded text-center">
               Please note that this setting only influences the names of Destiny-related weapons and gear for now.
               Want to help us translate the entire site to your language? <a href="mailto:translations@trials.report" target="_blank">Send us an email!</a>
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-xs-12 col-sm-2">
+            <h3 class="stat-header">
+              Customise player card content
+            </h3>
+            <span
+               data-content="Decide what you want to see after searching for a player by hiding certain sections" bs-popover>
+              <i class="material-icons icon--small info">&#xE8FD;</i>
+            </span>
+          </div>
+          <div class="col-xs-12 col-sm-10">
+            <div class="row">
+              <div class="col-xs-12 col-sm-4">
+                <div class="setting">
+                  <div class="togglebutton">
+                    <label>
+                      <input type="checkbox" checked>
+                    </label>
+                  </div>
+                  <label>Kill/Death ratio</label>
+                  <span>Including the chart from latest matches</span>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                <div class="setting">
+                  <div class="togglebutton">
+                    <label>
+                      <input type="checkbox" checked>
+                    </label>
+                  </div>
+                  <label>Main stats</label>
+                  <span>Win percentage, win streak, ELO-rating and lighthouse visits</span>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                <div class="setting">
+                  <div class="togglebutton">
+                    <label>
+                      <input type="checkbox" checked>
+                    </label>
+                  </div>
+                  <label>Weekly stats</label>
+                  <span>Stats and weapon usage for this week only</span>
+                </div>
+              </div>
+            </div>
+            <hr class="hr--faded">
+            <div class="row">
+              <div class="col-xs-12 col-sm-4">
+                <div class="setting">
+                  <div class="togglebutton">
+                    <label>
+                      <input type="checkbox" checked>
+                    </label>
+                  </div>
+                  <label>Equipped tab</label>
+                  <span>Current character loadout</span>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                <div class="setting">
+                  <div class="togglebutton">
+                    <label>
+                      <input type="checkbox" checked>
+                    </label>
+                  </div>
+                  <label>Last Matches tab</label>
+                  <span>An overview of the character's last three Trials matches</span>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-4">
+                <div class="setting">
+                  <div class="togglebutton">
+                    <label>
+                      <input type="checkbox" checked>
+                    </label>
+                  </div>
+                  <label>Stats tab</label>
+                  <span>Character data from the beginning of time</span>
+                </div>
+              </div>
+            </div>
+            <hr class="hr--faded">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-2">
+            <h3 class="stat-header faded">
+              Equipped tab
+            </h3>
+          </div>
+          <div class="col-xs-12 col-sm-10">
+            <div class="row">
+              <div class="col-xs-12 col-sm-4"> <!-- TODO: Stats from now on should only be shown if "Equipped" tab is turned on -->
+                <div class="setting">
+                  <div class="togglebutton">
+                    <label>
+                      <input type="checkbox" checked>
+                    </label>
+                  </div>
+                  <label>Equipped weapons</label>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-4"> <!-- TODO: Stats from now on should only be shown if "Equipped" tab is turned on -->
+                <div class="setting">
+                  <div class="togglebutton">
+                    <label>
+                      <input type="checkbox" checked>
+                    </label>
+                  </div>
+                  <label>Equipped armor</label>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-4"> <!-- TODO: Stats from now on should only be shown if "Equipped" tab is turned on -->
+                <div class="setting">
+                  <div class="togglebutton">
+                    <label>
+                      <input type="checkbox" checked>
+                    </label>
+                  </div>
+                  <label>Armor stats</label>
+                </div>
+              </div>
+            </div>
+            <hr class="hr--minor">
+            <div class="row">
+              <div class="col-xs-12 col-sm-4"> <!-- TODO: Stats from now on should only be shown if "Equipped" tab is turned on -->
+                <div class="setting">
+                  <div class="togglebutton">
+                    <label>
+                      <input type="checkbox" checked>
+                    </label>
+                  </div>
+                  <label>Character perks</label>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
