fix flawless popover showing if never flawless

--- a/app/shared/popovers/lighthouse.popover.html
+++ b/app/shared/popovers/lighthouse.popover.html
@@ -1,4 +1,4 @@
-<div class="popover" tabindex="-1" ng-show="player.lighthouse.years">
+<div class="popover" tabindex="-1" ng-show="player.lighthouse.yearCount">
   <div class="arrow"></div>
   <div class="popover-content">
     <div class="row">
