--- a/app/shared/popovers/currentWeek.popover.html
+++ b/app/shared/popovers/currentWeek.popover.html
@@ -6,7 +6,8 @@
     </div>
     <div class="row row--small-gutter">
       <div class="col-xs-5 stat">
-        <span ng-bind="player.currentWeek.percent + '%'"></span>
+        <span ng-if="player.currentWeek.matches > 0" ng-bind="player.currentWeek.percent + '%'"></span>
+        <span ng-if="player.currentWeek.matches == 0">N/A</span>
         <label>Percent</label>
       </div>
       <div class="col-xs-3 stat">
