lazy loading definition files

--- a/app/index.html
+++ b/app/index.html
@@ -81,18 +81,21 @@
     <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
     <script src="bower_components/xpull/xpull.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
+    <script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
+    <!--<locale-definitions></locale-definitions>-->
+
     <!-- build:js app.js -->
     <script src="shared/definitions/DestinyConstants.js"></script>
-    <script src="shared/definitions/en/DestinyArmorDefinition.js"></script>
-    <script src="shared/definitions/en/DestinyCrucibleMapDefinition.js"></script>
+    <!--<script src="shared/definitions/en/DestinyArmorDefinition.js"></script>-->
+    <!--<script src="shared/definitions/en/DestinyCrucibleMapDefinition.js"></script>-->
     <script src="shared/definitions/en/DestinyHazardDefinition.js"></script>
-    <script src="shared/definitions/en/DestinyMedalDefinition.js"></script>
-    <script src="shared/definitions/en/DestinySubclassDefinition.js"></script>
-    <script src="shared/definitions/en/DestinyWeaponDefinition.js"></script>
-    <script src="shared/definitions/en/DestinyTalentGridDefinition.js"></script>
+    <!--<script src="shared/definitions/en/DestinyMedalDefinition.js"></script>-->
+    <!--<script src="shared/definitions/en/DestinySubclassDefinition.js"></script>-->
+    <!--<script src="shared/definitions/en/DestinyWeaponDefinition.js"></script>-->
+    <!--<script src="shared/definitions/en/DestinyTalentGridDefinition.js"></script>-->
     <script src="shared/definitions/KdPerHourChartData.js"></script>
     <script src="assets/js/$QDecorator.js"></script>
     <script src="app.module.js"></script>
