temp fix for language update

--- a/app/shared/modals/settings.modal.html
+++ b/app/shared/modals/settings.modal.html
@@ -19,6 +19,7 @@
                 <option value="es" translate="SPANISH">Spanish</option>
                 <option value="de" translate="GERMAN">German</option>
                 <option value="fr" translate="FRENCH">French</option>
+                <option value="ja" translate="JAPANESE">Japanese</option>
               </select>
             </div>
             <hr class="hr--faded">
