localization for portuguese, add int/dis/str armor/agility/recovery for all languages

--- a/app/shared/modals/settings.modal.html
+++ b/app/shared/modals/settings.modal.html
@@ -20,6 +20,7 @@
                 <option value="de" translate="GERMAN">German</option>
                 <option value="fr" translate="FRENCH">French</option>
                 <option value="ja" translate="JAPANESE">Japanese</option>
+                <option value="pt-br" translate="PORTUGUESE">Portuguese</option>
               </select>
             </div>
             <hr class="hr--faded">
