implement lazy loading of translation data

--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
     <script src="bower_components/xpull/xpull.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
     <script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
+    <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
