add localization for Italian

--- a/app/shared/modals/settings.modal.html
+++ b/app/shared/modals/settings.modal.html
@@ -21,6 +21,7 @@
                 <option value="fr" translate="FRENCH">French</option>
                 <option value="ja" translate="JAPANESE">Japanese</option>
                 <option value="pt-br" translate="PORTUGUESE">Portuguese</option>
+                <option value="it" translate="ITALIAN">Italian</option>
               </select>
             </div>
             <hr class="hr--faded">
