--- a/app/shared/popovers/gggElo.popover.html
+++ b/app/shared/popovers/gggElo.popover.html
@@ -4,11 +4,11 @@
     <div class="row row--small-gutter">
       <div class="col-xs-6 stat">
         <span ng-bind="player.ggg.tier"></span>
-        <label>Tier</label>
+        <label translate="TIER"></label>
       </div>
       <div class="col-xs-6 stat">
         <span ng-bind="player.ggg.rank"></span>
-        <label>Rank</label>
+        <label translate="RANK"></label>
       </div>
     </div>
   </div>
