--- a/app/shared/popovers/lighthouse.popover.html
+++ b/app/shared/popovers/lighthouse.popover.html
@@ -7,11 +7,11 @@
         <div class="row row--small-gutter">
           <div class="col-xs-6 stat">
             <span ng-bind="year.accountCount"></span>
-            <label>Account</label>
+            <label translate="ACCOUNT"></label>
           </div>
           <div class="col-xs-6 stat">
             <span ng-bind="characterLighthouse(player, year)"></span>
-            <label>Character</label>
+            <label translate="CHARACTER"></label>
           </div>
         </div>
       </div>
