--- a/app/shared/popovers/currentWeek.popover.html
+++ b/app/shared/popovers/currentWeek.popover.html
@@ -1,22 +1,20 @@
 <div class="popover" tabindex="-1" ng-show="player.currentWeek">
   <div class="arrow"></div>
   <div class="popover-content">
-    <div class="stat__header">
-      This Week
-    </div>
+    <div class="stat__header" translate="THISWEEK"></div>
     <div class="row row--small-gutter">
       <div class="col-xs-5 stat">
         <span ng-if="player.currentWeek.matches > 0" ng-bind="player.currentWeek.percent + '%'"></span>
         <span ng-if="player.currentWeek.matches == 0">N/A</span>
-        <label>Percent</label>
+        <label translate="PERCENT"></label>
       </div>
       <div class="col-xs-3 stat">
         <span ng-bind="player.currentWeek.wins"></span>
-        <label>Wins</label>
+        <label translate="WINS"></label>
       </div>
       <div class="col-xs-4 stat">
         <span ng-bind="player.currentWeek.losses"></span>
-        <label>Losses</label>
+        <label translate="LOSSES"></label>
       </div>
     </div>
   </div>
