--- a/app/shared/popovers/streak.popover.html
+++ b/app/shared/popovers/streak.popover.html
@@ -1,17 +1,15 @@
 <div class="popover" tabindex="-1" ng-show="player.longestStreak">
   <div class="arrow"></div>
   <div class="popover-content">
-    <div class="stat__header">
-      Longest Win Streak
-    </div>
+    <div class="stat__header" translate="WINSTREAK"></div>
     <div class="row row--small-gutter">
       <div class="col-xs-6 stat">
         <span ng-bind="player.longestStreak.accountStreak || 0 | number"></span>
-        <label>Account</label>
+        <label translate="ACCOUNT"></label>
       </div>
       <div class="col-xs-6 stat">
         <span ng-bind="player.longestStreak.characterStreak || 0 | number"></span>
-        <label>Character</label>
+        <label translate="CHARACTER"></label>
       </div>
     </div>
   </div>
