revamp match summary popover, some html cleanup, minor css changes

--- a/app/shared/popovers/weaponstats.popover.html
+++ b/app/shared/popovers/weaponstats.popover.html
@@ -1,4 +1,4 @@
-<div class="popover" tabindex="-1">
+<div class="popover weapon-stats" tabindex="-1">
   <div class="arrow"></div>
   <div ng-if="topWeapons && topWeapons[weapon.definition.itemHash] != null">
     <div class="popover-content">
