--- a/app/shared/popovers/matchSummary.popover.html
+++ b/app/shared/popovers/matchSummary.popover.html
@@ -3,11 +3,11 @@
   <div class="popover-content">
     <div class="row">
       <div class="col-xs-6 stat">
-        <span ng-bind="str.kdDisplay"></span>
+        <span ng-bind="str.kd | number:2"></span>
         <label translate="killsDeathsRatio"></label>
       </div>
       <div class="col-xs-6 stat">
-        <span ng-bind="str.kills"></span>
+        <span ng-bind="str.kills | number:0"></span>
         <label translate="KILLS"></label>
       </div>
     </div>
