change angular locale when changing language

--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,8 @@
     <script src="bower_components/angular-translate/angular-translate.js"></script>
     <script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
     <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+    <script src="bower_components/angular-dynamic-locale/src/tmhDynamicLocale.js"></script>
+    <script src="bower_components/angular-translate-handler-log/angular-translate-handler-log.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
