lots of translations, some are missing or need adjusting

--- a/app/shared/modals/settings.modal.html
+++ b/app/shared/modals/settings.modal.html
@@ -30,8 +30,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header" translate="CUSTOMISE"></h3>
-            <span
-               data-content="Decide what you want to see after searching for a player by hiding certain sections" bs-popover>
+            <span data-content="Decide what you want to see after searching for a player by hiding certain sections" bs-popover>
               <i class="material-icons icon--small info">&#xE8FD;</i>
             </span>
           </div>
