--- a/app/shared/popovers/currentWeek.popover.html
+++ b/app/shared/popovers/currentWeek.popover.html
@@ -10,11 +10,11 @@
       </div>
       <div class="col-xs-3 stat">
         <span ng-bind="player.currentWeek.wins | number:0"></span>
-        <label translate="WINS"></label>
+        <label translate="wins"></label>
       </div>
       <div class="col-xs-4 stat">
         <span ng-bind="player.currentWeek.losses | number:0"></span>
-        <label translate="LOSSES"></label>
+        <label translate="losses"></label>
       </div>
     </div>
   </div>
