--- a/app/shared/popovers/matchSummary.popover.html
+++ b/app/shared/popovers/matchSummary.popover.html
@@ -8,7 +8,7 @@
       </div>
       <div class="col-xs-6 stat">
         <span ng-bind="str.kills | number:0"></span>
-        <label translate="KILLS"></label>
+        <label translate="kills"></label>
       </div>
     </div>
   </div>
