--- a/app/shared/popovers/weaponstats.popover.html
+++ b/app/shared/popovers/weaponstats.popover.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-xs-3 stat">
           <span ng-bind="topWeapons[weapon.definition.itemHash].kills | number:0"></span>
-          <label translate="KILLS"></label>
+          <label translate="kills"></label>
         </div>
         <div class="col-xs-3 stat">
           <span ng-bind="topWeapons[weapon.definition.itemHash].headshots | number:0"></span>
@@ -17,7 +17,7 @@
         </div>
         <div class="col-xs-3 stat">
           <span ng-bind="topWeapons[weapon.definition.itemHash].win_percentage"></span>%
-          <label translate="WINS"></label>
+          <label translate="wins"></label>
         </div>
       </div>
     </div>
