fix app.js not revving, no need for manifest.js on server, fix app.js location

--- a/app/index.html
+++ b/app/index.html
@@ -88,9 +88,9 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js app.js -->
+    <!-- build:js assets/js/app.js -->
     <script src="shared/definitions/DestinyConstants.js"></script>
-    <script src="shared/definitions/en/DestinyHazardDefinition.js"></script>
+    <script src="shared/definitions/en/DestinyHazardDefinition.js"></script><!-- migrate into translations -->
     <script src="assets/js/$QDecorator.js"></script>
     <script src="app.module.js"></script>
     <script src="app.routes.js"></script>
